[package]
name = "goe-prometheus-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
prometheus_exporter = "0.8.5"
env_logger = "0.9"
log = { version = "0.4" }
rand = "0.8"
reqwest = { version = "0.11",  features = ["blocking", "json", ] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
